# KuraLive

./: .env.example  .gitignore  LICENSE  PAYMENT_INTEGRATION_SUMMARY.md  README.md  docker-compose.yml  prometheus.yml  render.yaml
.github/workflows/: ci.yml  enterprise_ci.yml
backend/: .env.example  Dockerfile  Procfile  app.py  cleanup_database.sql  config.py  database.py  extensions.py  migration_modules.sql  migration_production.sql  migrations.sql  models.py  pyproject.toml  railway.json  requirements.txt  schema.sql  test_script.py  worker.py
backend/routes/: admin_routes.py  api_routes.py  auth_routes.py  contacts_routes.py  daraja_routes.py  poll_routes.py  sms_routes.py  social_routes.py
backend/services/: email_service.py  sms_service.py
backend/src/domain/repositories/: election_repository.py
backend/src/domain/services/: agent_service.py  station_service.py
backend/src/infrastructure/repositories/: postgres_agent_repo.py  postgres_election_repo.py  postgres_poll_repo.py  postgres_station_repo.py
backend/tests/: conftest.py  test_admin.py  test_api_security.py  test_auth.py  test_helpers.py  test_hexagonal_elections.py
backend/utils/: decorators.py  helpers.py  limiter.py  storage.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: UpgradeModal.jsx
frontend/src/contexts/: AuthContext.jsx  (+3 more)
k8s/: backend-deployment.yaml  frontend-deployment.yaml  pgbouncer-deployment.yaml  redis-service.yaml
(+34 files in other folders)
